--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,3 +1,6 @@
+/* ===========================
+   Header Section Starts
+   =========================== */
 #header {
   border-bottom: 1px solid #ddd;
   position: sticky;
@@ -16,4 +19,119 @@
 #navbar ul {
   display: flex;
   gap: 40px;
+}
+/* ===========================
+   Header Section Ends
+   =========================== */
+
+/* ===========================
+   Book Collection Section Starts
+   =========================== */
+#book-section {
+  margin: 20px auto;
+  padding: 20px;
+}
+
+#book-container {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 24px;
+  margin-top: 20px;
+}
+
+.book {
+  border: 1px solid #ddd;
+  padding: 24px;
+  background: white;
+  border-radius: 10px;
+}
+
+.book .book-cover-container {
+  width: 100%;
+  height: 300px;
+  border: 1px solid #eee;
+  border-radius: 5px;
+  overflow: hidden;
+  margin-bottom: 20px;
+}
+
+.book .book-cover {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+.book .book-title {
+  font-size: 14px;
+  margin-bottom: 10px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  line-clamp: 2;
+  -webkit-box-orient: vertical;
+}
+
+.book p {
+  font-size: 12px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  line-clamp: 3;
+  -webkit-box-orient: vertical;
+}
+
+.book .book-authors {
+  margin-bottom: 10px;
+  color: #555;
+}
+
+.book .book-subjects {
+  color: #999;
+}
+
+#loader {
+  display: none; /* Initially hidden */
+  text-align: center;
+  font-size: 20px;
+  margin-top: 100px;
+}
+
+/* ===========================
+   Book Collection Section Ends
+   =========================== */
+
+/* --------------- Responsive Styles ------------- */
+
+/* Extra Small Devices (phones, less than 576px) */
+@media (max-width: 575px) {
+  #navbar {
+    display: none;
+  }
+
+  #book-container {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
+
+/* Small Devices (tablets, 576px and up) */
+@media (min-width: 576px) and (max-width: 767px) {
+  #book-container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+/* Medium Devices (desktops, 768px and up) */
+@media (min-width: 768px) and (max-width: 991px) {
+  #book-container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+/* Large Devices (large desktops, 992px and up) */
+@media (min-width: 992px) and (max-width: 1368px) {
+  #book-container {
+    grid-template-columns: repeat(3, 1fr);
+  }
 }
