--- a/components/header.html
+++ b/components/header.html
@@ -10,5 +10,7 @@
       <li><a href=".">Home</a></li>
       <li><a href="/pages/wishlist.html">Wishlist</a></li>
     </ul>
+
+    <!-- TODO: Mobile Navbar Button with Dropdown -->
   </nav>
 </div>
