--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -1,112 +1,16 @@
 /* ===========================
    Reset Styles
    =========================== */
-html,
-body,
-div,
-span,
-applet,
-object,
-iframe,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-blockquote,
-pre,
-a,
-abbr,
-acronym,
-address,
-big,
-cite,
-code,
-del,
-dfn,
-em,
-img,
-ins,
-kbd,
-q,
-s,
-samp,
-small,
-strike,
-strong,
-sub,
-sup,
-tt,
-var,
-b,
-u,
-i,
-center,
-dl,
-dt,
-dd,
-ol,
-ul,
-li,
-fieldset,
-form,
-label,
-legend,
-table,
-caption,
-tbody,
-tfoot,
-thead,
-tr,
-th,
-td,
-article,
-aside,
-canvas,
-details,
-embed,
-figure,
-figcaption,
-footer,
-header,
-hgroup,
-menu,
-nav,
-output,
-ruby,
-section,
-summary,
-time,
-mark,
-audio,
-video {
+* {
+  box-sizing: border-box;
   margin: 0;
   padding: 0;
 }
 
-/* Set base styles for HTML5 elements */
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-menu,
-nav,
-section {
-  display: block;
-}
-
-/* Body reset */
 body {
   font-family: "Montserrat", sans-serif;
   background-color: #f4f4f4;
   color: #333;
-  box-sizing: border-box;
 }
 
 /* Remove list styles */
@@ -140,9 +44,24 @@ a {
   margin: auto;
 }
 
+.shadow {
+  transition: all 0.3s ease-in-out;
+  box-shadow: 0 1px 1px hsl(0deg 0% 0% / 0.01), 0 2px 2px hsl(0deg 0% 0% / 0.01),
+    0 4px 4px hsl(0deg 0% 0% / 0.01), 0 8px 8px hsl(0deg 0% 0% / 0.01),
+    0 16px 16px hsl(0deg 0% 0% / 0.01);
+}
+
+.shadow:hover {
+  transition: all 0.3s ease-in-out;
+  box-shadow: 0 1px 1px hsl(0deg 0% 0% / 0.02), 0 2px 2px hsl(0deg 0% 0% / 0.02),
+    0 4px 4px hsl(0deg 0% 0% / 0.02), 0 8px 8px hsl(0deg 0% 0% / 0.02),
+    0 16px 16px hsl(0deg 0% 0% / 0.02);
+}
+
 /* Container class for centering content */
 .container {
   width: 90%;
   max-width: 1200px;
   margin: 0 auto;
+  padding: 20px;
 }
