--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -5,6 +5,7 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  transition: all 0.5s ease-in-out;
 }
 
 body {
@@ -63,6 +64,12 @@ a {
   max-width: 1200px;
   margin: 0 auto;
   padding: 20px;
+}
+
+button:disabled,
+button[disabled] {
+  background: #ccc !important;
+  cursor: not-allowed !important;
 }
 
 /* --------------- Responsive Styles ------------- */
