--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -4,6 +4,7 @@
 #header {
   border-bottom: 1px solid #ddd;
   position: sticky;
+  z-index: 10;
   top: 0;
   background: white;
 }
@@ -85,18 +86,19 @@
 
 .book {
   border: 1px solid #ddd;
-  padding: 24px;
+  padding: 12px;
   background: white;
-  border-radius: 10px;
+  border-radius: 12px;
+  position: relative;
 }
 
 .book .book-cover-container {
   width: 100%;
   height: 300px;
   border: 1px solid #eee;
-  border-radius: 5px;
+  border-radius: 6px;
   overflow: hidden;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
   padding: 20px;
   background: #f9f9f9;
 }
@@ -105,6 +107,10 @@
   width: 100%;
   height: 100%;
   object-fit: contain;
+}
+
+.book .book-content-container {
+  padding: 6px 6px 12px;
 }
 
 .book .book-title {
@@ -126,12 +132,40 @@
   -webkit-line-clamp: 3;
   line-clamp: 3;
   -webkit-box-orient: vertical;
+  color: #999;
 }
 
 .book .book-authors {
   margin-bottom: 10px;
   color: #555;
   font-weight: 500;
+}
+
+.wishlist-icon-container {
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  background: white;
+  border: 1px solid #ccc;
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+}
+
+.wishlist-icon {
+  width: 16px;
+  height: 16px;
+  transition: all 0.01s ease;
+}
+
+.wishlist-icon:hover {
+  width: 18px;
+  height: 18px;
+  transition: all 0.01s ease;
 }
 
 #loader {
