feat: Identification No. property added in the book card

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -141,6 +141,10 @@
   font-weight: 500;
 }
 
+.book .book-id {
+  margin-top: 10px;
+}
+
 .wishlist-icon-container {
   position: absolute;
   top: 24px;
