--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -4,9 +4,11 @@
 #header {
   border-bottom: 1px solid #ddd;
   position: sticky;
+  width: 100%;
   z-index: 10;
   top: 0;
   background: white;
+  height: 80px;
 }
 
 #header-contents {
@@ -65,11 +67,13 @@
 /* ===========================
    Book Collection Section Starts
    =========================== */
-#book-section {
+#book-section,
+#wishlist-section {
   margin: 20px auto;
 }
 
-#book-container-wrapper {
+#book-container-wrapper,
+#wishlist-container-wrapper {
   min-height: 400px;
   display: flex;
   flex-direction: column;
@@ -77,7 +81,8 @@
   align-items: center;
 }
 
-#book-container {
+#book-container,
+#wishlist-container {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   gap: 24px;
@@ -210,11 +215,12 @@
    Book Collection Section Ends
    =========================== */
 
-/* --------------- Responsive Styles ------------- */
+/* ~~~~~~~~~~~~~~~~~ Responsive Styles ~~~~~~~~~~~~~~~~~ */
 
 /* Large Devices (big screen tablets, laptops, 992px and up) */
 @media (min-width: 992px) and (max-width: 1368px) {
-  #book-container {
+  #book-container,
+  #wishlist-container {
     grid-template-columns: repeat(3, 1fr);
   }
 
@@ -225,14 +231,16 @@
 
 /* Medium Devices (big screen tablets, 768px and up) */
 @media (min-width: 768px) and (max-width: 991px) {
-  #book-container {
+  #book-container,
+  #wishlist-container {
     grid-template-columns: repeat(2, 1fr);
   }
 }
 
 /* Small Devices (tablets, 576px and up) */
 @media (min-width: 576px) and (max-width: 767px) {
-  #book-container {
+  #book-container,
+  #wishlist-container {
     grid-template-columns: repeat(2, 1fr);
   }
 
@@ -255,7 +263,8 @@
     display: none;
   }
 
-  #book-container {
+  #book-container,
+  #wishlist-container {
     grid-template-columns: repeat(1, 1fr);
   }
 
@@ -272,7 +281,8 @@
     opacity: 0.4;
   }
 
-  #book-container-wrapper {
+  #book-container-wrapper,
+  #wishlist-container-wrapper {
     min-height: 250px;
   }
 }
