feat: Book-Details page added; fix: reverse author name showing has been fixed;

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -12,6 +12,9 @@ body {
   font-family: "Montserrat", sans-serif;
   background-color: #f4f4f4;
   color: #333;
+  -webkit-user-select: none; /* Safari */
+  -ms-user-select: none; /* IE 10 and IE 11 */
+  user-select: none; /* Standard syntax */
 }
 
 /* Remove list styles */
