--- a/components/header.html
+++ b/components/header.html
@@ -6,11 +6,20 @@
   </a>
 
   <nav id="navbar">
-    <ul>
+
+    <div class="menu-icon" id="menu-icon">
+      <!-- Hamburger Icon -->
+      <svg width="30" height="30" viewBox="0 0 100 80" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <rect width="100" height="10" fill="black"></rect>
+        <rect y="30" width="100" height="10" fill="black"></rect>
+        <rect y="60" width="100" height="10" fill="black"></rect>
+      </svg>
+    </div>
+    
+    <ul class="nav-links" id="nav-links">
       <li><a href=".">Home</a></li>
       <li><a href="/pages/wishlist.html">Wishlist</a></li>
     </ul>
-
-    <!-- TODO: Mobile Navbar Button with Dropdown -->
   </nav>
+  
 </div>
