--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -75,6 +75,37 @@ button[disabled] {
   cursor: not-allowed !important;
 }
 
+.spinner {
+  width: 64px;
+  height: 64px;
+  position: relative;
+  background-image: linear-gradient(#aaa 16px, transparent 0),
+    linear-gradient(#777 16px, transparent 0),
+    linear-gradient(#777 16px, transparent 0),
+    linear-gradient(#aaa 16px, transparent 0);
+  background-repeat: no-repeat;
+  background-size: 16px 16px;
+  background-position: left top, left bottom, right top, right bottom;
+  animation: rotate 1s linear infinite;
+}
+@keyframes rotate {
+  0% {
+    width: 64px;
+    height: 64px;
+    transform: rotate(0deg);
+  }
+  50% {
+    width: 30px;
+    height: 30px;
+    transform: rotate(180deg);
+  }
+  100% {
+    width: 64px;
+    height: 64px;
+    transform: rotate(360deg);
+  }
+}
+
 /* --------------- Responsive Styles ------------- */
 
 /* Extra Small Devices (phones, less than 576px) */
